@@ -1,0 +1,10 @@
+#	$NetBSD: Makefile,v 1.1 2008/06/22 13:53:59 ad Exp $
+
+PROG=	psrset
+MAN=	psrset.8
+
+LDADD+=	-lrt
+
+WARNS=	4
+
+.include <bsd.prog.mk>
